fixed slideshow flickering

--- a/e-commerce-web/styles/globals.css
+++ b/e-commerce-web/styles/globals.css
@@ -71,6 +71,7 @@ a {
 max-width: 1400px; 
 margin: auto;
 width: 100%;
+height: 75%;
 
 }
 
@@ -257,7 +258,7 @@ width: 100%;
   position: relative;
   height: 800px;
   line-height: 0.9; 
-  width: 100%;
+  width: 1400px;
   margin-bottom: 20px;
   color: rgb(47, 105, 230);
 }
@@ -413,19 +414,34 @@ text-align: end;
 }
 
 .gradientDiv{
-  background-image: linear-gradient(white,grey);
-  animation: slidein 3s;
+  width: 4000px
+
 }
+  @media screen and (max-width:500px){
+    .gradientDiv{
+      width: 2000px
+    
+    }
+
+    .layout{
+      width: 1200px;
+    }
+   }
+   @media screen and (max-width:950px){
+  
+
+    .layout{
+      width: 1500px;
+    }
+   }
+
+
 .carousel{
-  margin-bottom: 200px;
-  height: 800px;
-  line-height: 0.9; 
-  width: 100%;
-  background: url('../public/headGirl1.webp') no-repeat center center;
-  background-size: 50%;
-  z-index: 1000000;
-  animation: slidein 3s;
-  transition: all 1s ease
+  margin-bottom: 75px;
+ 
+  width: 1400px;
+  /* background: url('../public/headGirl1.webp') no-repeat center center; */
+ 
 }
 .carousel1{
   margin-bottom: 200px;
@@ -843,13 +859,6 @@ margin-top: 160px;
 }
 
 
-@media screen and (max-width:500px){
- .layout {
-  height: 3700px;
-  width:500px;
-  }
-  
-}
 @media screen and (max-width:1118px) {
   .hero-banner-image{
     padding-left: 20px;
